--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ img {
  height: auto;
 }
 
+address{
+  font-style: normal;
+}
+
 /* header */
 
 
@@ -234,7 +238,7 @@ flex-direction: column;
 
 
 .hero {
-  width: 320px;
+  max-width: 320px;
   padding: 72px 0;
   margin: 0 auto;
   letter-spacing: 0.4;
@@ -242,7 +246,6 @@ flex-direction: column;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)),
     url(../images/people-office-1.jpg);
-  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -295,8 +298,7 @@ height: 160px;
 
 @media screen and (min-width: 768px){
 .hero {
-  width: 768px;
-  height:436px;
+  max-width: 768px;
   padding: 112px 0;
 }
 .hero-heading {
@@ -313,8 +315,7 @@ letter-spacing: 0.02em;
 
 @media screen and (min-width: 1158px){
 .hero {
-  width: 1440px;
-  height: 600px;
+  max-width: 1440px;
   padding: 188px 0;
 
 }
@@ -323,13 +324,18 @@ letter-spacing: 0.02em;
   margin-bottom: 48px;
 }
 }
+.features{
+  padding: 96px 0;
+}
 
-.featuers{
-  padding: 96px 16px;
+.featuers .container{
+max-width: 320px;
+padding: 0 16px;
+margin: 0 auto;
 }
 
 .features-images{
-  visibility: hidden;
+ display: none;
 }
 
 .features-headings{
@@ -347,7 +353,7 @@ margin-bottom: 8px;
 .features-list {
   display: flex;
 flex-wrap: wrap;
-margin-bottom: 72px;
+gap: 72px;
 }
 
 
@@ -355,7 +361,7 @@ margin-bottom: 72px;
 @media screen and (min-width: 768px){
   .features-list {
 transform: calc(100%-24/2);
-gap: 24px;
+row-gap: 72px ;
 
 }
 .features-headings{
@@ -363,8 +369,7 @@ gap: 24px;
 }
 .features-items{
 width: 356px;
-height: 120px;
-margin-bottom: 72px;
+
 
 }
 }
@@ -406,8 +411,15 @@ margin-bottom: 72px;
   background-color: #f4f4fd;
   display: flex;
   text-align: center;
+  padding: 96px 0;
 
 
+}
+
+.our-team .container{
+  max-width: 320px;
+  padding: 0 16px;
+  margin: 0 auto;
 }
 
 .team-head {
@@ -420,10 +432,15 @@ text-align: center;
 
 .team-item {
   display: flex;
-  gap: 24px;
+  gap: 72px;
   flex-wrap: wrap;
+  justify-content: center;
 
 
+}
+
+.div-info{
+  padding: 32px 0;
 }
 
 .team-list {
@@ -504,7 +521,7 @@ display: flex;
 }
 
 .porfolio {
-padding: 96px 16px;
+padding: 96px 0;
 }
 
 .portfolio-heading {
@@ -531,7 +548,7 @@ padding: 96px 16px;
 }
 
 .portfolio-items {
-  width: calc((100% - 16px) / 1);
+  width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -597,8 +614,6 @@ padding: 96px 16px;
   background-color: #2e2f42;
 padding: 96px 0;
   color: #4d5ae5;
-  display: flex;
-  flex-wrap: wrap;
  
 }
 .footer-logo{
@@ -639,21 +654,16 @@ margin-bottom: 17px;
     letter-spacing: 0.02em;
     padding: 0 0;
     text-align: center;
-  margin-top: 72px;
+
 }
 .footer-icons{
-display: flex;
-flex-direction: column;
-  gap: 15px; 
-  margin-top: 16px;
-  padding-left: 56px;
-  padding-right: 56px;
+
 }
 .footer-list {
   display: flex;
 flex-direction: row;
 gap: 16px;
-margin-bottom: 72px;
+justify-content: center;
 }
 .footer-item {
   width: 40px;
@@ -683,9 +693,7 @@ margin-bottom: 72px;
   fill: #f4f4fd;
 }
 
-.foot-container {
-  margin-right: 120px;
-}
+
 
 .footer-textarea-p{
   font-family: "Roboto", sans-serif;
@@ -792,13 +800,14 @@ gap: 24px;
 
 @media screen and (min-width: 768px){
 .page-footer{
-padding: 96px 108px;
+padding: 96px 0;
 }
 .page-footer .container.footer-container{
   display: flex;
   flex-wrap: wrap;
   row-gap: 72px ;
  align-items: baseline;
+ padding: 0 108px;
 }
 
 .foot-container{
@@ -849,9 +858,13 @@ font-weight: 400;
   position: fixed;
   top: 0;
   left: 0;
+    width: 100%;
+  height: 100%;
+  background-color: #fff;
    opacity: 0;
   visibility: hidden;
   pointer-events: none;
+
 }
 .mobile-menu.is-open{
     opacity: 1;
@@ -861,14 +874,14 @@ font-weight: 400;
 
 
 .mobile-menu-container{
-   position: absolute;
-  top: 50%;
-  left: 50%;
- min-width: 320px;
-min-height: 640px;
-
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 background-color: #fff;
-
+padding: 0 16px;
+padding-top: 72px;
+padding-bottom: 40px;
 }
 
 
@@ -893,49 +906,30 @@ background-color: #fff;
     background-color: #9c9da3;
   }
 
-.mobile-div{
-padding: 72px 16px;
+.mobile-nav{
+margin-bottom: auto;
 
 
 }
 
 .mobile-list{
-  gap: 40px;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  margin-bottom: auto;
-  flex-direction: column;
-}
-.mobile-items-studio{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11111;
-letter-spacing: 0.02em;
-color: #404bbf;
-
-
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    color: #2e2f42;
+    font-family: "Roboto", sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
 }
 
-.mobile-items{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11111;
-letter-spacing: 0.02em;
-color: #2e2f42;
+.mobile-contacts-link-active{
+  color: #404bbf;
 }
-
-
-.mobile-address{
-  margin-top: 168px;
+.mobile-link-item-active{
+  color: #404bbf;
 }
-.mobile-contacts-list{
-  display: flex;
-  flex-direction: column;
-  gap: 24px ;
-  margin-left: 16px;
-}
-
 .mobile-contacts-link{
   font-weight: 500;
 font-size: 20px;
@@ -965,14 +959,15 @@ color: #434455;
 .mobile-icon-list {
 display: flex;
   justify-content: center;
-  margin-top:48px;
-  margin-bottom:40px;
   gap: 40px;
 }
 
 .mobile-icon-item {
   width: 40px;
   height: 40px;
+}
+.mobile-icons{
+
 }
 
 .mobile-link {
@@ -986,6 +981,7 @@ display: flex;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .mobile-icon {
   fill: #f4f4fd;
